--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,13 @@
         $(function (){
             getArticles();
         });
-        $('#next-button').on('click', function(){
-            alert( "Всем - привет!" );
-            //getArticlesNext();
-        });
+    </script>
+    <script>
+        function next() {
+            getArticlesNext();
+        }
     </script>
 </head>
 <body>
-<br />
 </body>
 </html>
